Fix spacing issue on credit

--- a/app/stream/stream.scss
+++ b/app/stream/stream.scss
@@ -410,7 +410,7 @@ transition: all 450ms;
 				align-items: center;
 				transition: scale 250ms ease;
 				margin-top: 100px;
-				margin-inline: 2em;
+				margin-inline: .7em;
 				&:hover{
 					cursor: pointer;
 					scale: 1.05;
